--- a/tasks/templates/login.html
+++ b/tasks/templates/login.html
@@ -42,7 +42,7 @@
             <button type="submit" class="btn btn-primary w-100">Sign In</button>
 
             <div class="text-center mt-3">
-                <p>Not a member? <a href="register">Register</a></p>
+                <p>Not a member? <a href="/register">Register</a></p>
             </div>
         </form>
     </div>
