--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -4,7 +4,7 @@
     <a class="navbar-brand" href="{% url 'task-list' %}">TaskManager</a>
     <div class="ms-auto">
       {% if user.is_authenticated %}
-        <span class="text-light me-3">Hi, {{ user.username }}!</span>
+        <span class="text-light me-3">Hi, {{ user.first_name }} {{ user.last_name }}</span>
         <a href="{% url 'logout' %}" class="btn btn-outline-light btn-sm">Logout</a>
       {% else %}
         <a href="{% url 'login' %}" class="btn btn-outline-light btn-sm me-2">Login</a>
