--- a/tasks/templates/register.html
+++ b/tasks/templates/register.html
@@ -22,19 +22,19 @@
                 <!-- First Name -->
                 <div class="mb-3 col-md-6">
                     <label for="first_name" class="form-label">First Name</label>
-                    <input name="first_name" type="text" class="form-control" id="first_name" required>
+                    <input name="first_name" type="text" class="form-control" id="first_name" value="{{first_name}}" required>
                 </div>
 
                 <!-- Last Name -->
                 <div class="mb-3 col-md-6">
                     <label for="last_name" class="form-label">Last Name</label>
-                    <input name="last_name" type="text" class="form-control" id="last_name" required>
+                    <input name="last_name" type="text" class="form-control" id="last_name" value="{{last_name}}" required>
                 </div>
 
                 <!-- Email -->
                 <div class="mb-3 col-md-12">
                     <label for="email" class="form-label">Email (Email is used as Username)</label>
-                    <input name="email" type="email" class="form-control" id="email" required>
+                    <input name="email" type="email" class="form-control" id="email" value="{{email}}" required>
                 </div>
 
                 <!-- Password -->
