--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -36,7 +36,7 @@
                     <input class="form-check-input" type="checkbox" id="remember" checked>
                     <label class="form-check-label" for="remember">Remember me</label>
                 </div>
-                <a href="#">Forgot password?</a>
+                <a href="/password-reset/">Forgot password?</a>
             </div>
 
             <button type="submit" class="btn btn-primary w-100">Sign In</button>
